[gd_scene load_steps=3 format=3 uid="uid://8ieargn5wxga"]

[ext_resource type="Script" path="res://ChatBox/chat_box.gd" id="1_q186p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_246db"]
bg_color = Color(0.036, 0.05, 0.0413667, 0.392157)

[node name="ChatBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q186p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChatLog" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 250)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_246db")
bbcode_enabled = true

[node name="ChatEnter" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="text_submitted" from="VBoxContainer/ChatEnter" to="." method="_on_chat_enter_text_submitted"]
